fix color contrast aa in css dev tools

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -2,7 +2,7 @@
     --primary-color: #055a05;
     --secondary-color: #f4a261;
     --accent1-color: #264653;
-    --accent2-color: #e9c46a;
+    --accent2-color: #e7d9e8;
     --heading-font: Arial, Helvetica, sans-serif;
     --body-font: Times New Roman, Georgia, serif;
 }
@@ -11,11 +11,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
+
+}
+
+a,
+a:visited,
+a:hover,
+a:focus a:active {
+    color: inherit;
+    text-decoration: none;
 }
 
 header,
@@ -40,12 +50,10 @@ header img {
 .navigation {
     display: flex;
     list-style: none;
-
 }
 
 .navigation li {
     flex: 1 1 auto;
-
 }
 
 h1,
@@ -101,8 +109,8 @@ article {
     width: 90%;
     opacity: .8;
     padding: 10px;
-    background-color: var(--primary-color);
-    color: var(--accent2-color);
+    background-color: var(--accent1-color);
+    color: white;
     margin-left: 40px;
 
 }
